upgpkg: pacman-git 5.0.1.249.g27f64e37-1
add arm support

--- a/pacman-git/PKGBUILD
+++ b/pacman-git/PKGBUILD
@@ -5,11 +5,11 @@
 # Contributor: Andres Perera <aepd87@gmail.com>
 
 pkgname=pacman-git
-pkgver=5.0.1.192.ge4f13e62
+pkgver=5.0.1.249.g27f64e37
 pkgrel=1
 pkgdesc="A library-based package manager with dependency support. git version."
-arch=('i686' 'x86_64')
-url="http://www.archlinux.org/pacman/"
+arch=('i686' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
+url="https://www.archlinux.org/pacman/"
 license=('GPL')
 depends=('archlinux-keyring' 'bash' 'curl' 'gpgme' 'libarchive'
          'pacman-mirrorlist')
@@ -24,10 +24,12 @@ options=('strip' 'debug')
 source=(git+https://git.archlinux.org/pacman.git
         pacman.conf.i686
         pacman.conf.x86_64
+        pacman.conf.arm
         makepkg.conf)
 sha256sums=('SKIP'
             '0c087d26e80333267391a6e9e34b95a2ffb103cb9391cb53cc5d97ad954af774'
             'c5a3ec55f9d1bc52e5e5b127f76b7b16b79738268691a3e1d842359033e460da'
+            'aa28a1e4050a5a256d9832a584b331b9c783ff3a1859289c4cdd4eb31556081c'
             '6066d67d818ee36760bf121c76d5019130f7875b3e5ed179b319b810a3a9685b')
 
 pkgver() {
@@ -68,7 +70,11 @@ package() {
 
   # install Arch specific stuff
   install -dm755 "$pkgdir/etc"
-  install -m644 "$srcdir/pacman.conf.$CARCH" "$pkgdir/etc/pacman.conf"
+  if [[ $CARCH =~ arm* || $CARCH = aarch64 ]]; then
+    install -m644 "$srcdir/pacman.conf.arm" "$pkgdir/etc/pacman.conf"
+  else
+    install -m644 "$srcdir/pacman.conf.$CARCH" "$pkgdir/etc/pacman.conf"
+  fi
 
   # set things correctly in the default conf file
   case $CARCH in
@@ -79,6 +85,22 @@ package() {
     x86_64)
       mychost="x86_64-pc-linux-gnu"
       myflags="-march=x86-64"
+      ;;
+    arm)
+      mychost="armv5tel-unknown-linux-gnueabi"
+      myflags="-march=armv5te"
+      ;;
+    armv6h)
+      mychost="armv6l-unknown-linux-gnueabihf"
+      myflags="-march=armv6 -mfloat-abi=hard -mfpu=vfp"
+      ;;
+    armv7h)
+      mychost="armv7l-unknown-linux-gnueabihf"
+      myflags="-march=armv7-a -mfloat-abi=hard -mfpu=vfpv3-d16"
+      ;;
+    aarch64)
+      mychost="aarch64-unknown-linux-gnu"
+      myflags="-march=armv8-a"
       ;;
   esac
 
@@ -97,7 +119,7 @@ package() {
     ln -s pacman "$pkgdir/usr/share/bash-completion/completions/$f"
   done
 
-  install -Dm644 scripts/completion/zsh_completion $pkgdir/usr/share/zsh/site-functions/_pacman
+  install -Dm644 scripts/completion/zsh_completion "$pkgdir/usr/share/zsh/site-functions/_pacman"
 }
 
 # vim: set ts=2 sw=2 et:
