upgpkg: pacman-git 5.0.1.257.g77986af9-1
add patch for proper stripping of PIE binaries

--- a/pacman-git/PKGBUILD
+++ b/pacman-git/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: Andres Perera <aepd87@gmail.com>
 
 pkgname=pacman-git
-pkgver=5.0.1.249.g27f64e37
-pkgrel=2
+pkgver=5.0.1.257.g77986af9
+pkgrel=1
 pkgdesc="A library-based package manager with dependency support. git version."
 arch=('i686' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
 url="https://www.archlinux.org/pacman/"
@@ -16,17 +16,19 @@ depends=('archlinux-keyring' 'bash' 'curl' 'gpgme' 'libarchive'
 optdepends=('pacman-contrib: various helper utilities')
 makedepends=('git' 'asciidoc')
 checkdepends=('python2' 'fakechroot')
-provides=("pacman=${pkgver%.r*}")
+provides=("pacman=${pkgver%.*.*}")
 conflicts=('pacman')
-backup=(etc/pacman.conf
-        etc/makepkg.conf)
+backup=("etc/pacman.conf"
+        "etc/makepkg.conf")
 options=('strip' 'debug')
-source=(git+https://git.archlinux.org/pacman.git
-        pacman.conf.i686
-        pacman.conf.x86_64
-        pacman.conf.arm
-        makepkg.conf)
+source=("git+https://git.archlinux.org/pacman.git"
+        "support-file-5.33-pie-executable.patch::https://patchwork.archlinux.org/patch/494/mbox/"
+        "pacman.conf.i686"
+        "pacman.conf.x86_64"
+        "pacman.conf.arm"
+        "makepkg.conf")
 sha256sums=('SKIP'
+            '9f2de2c9c361de1d0f6dd3640e99df6ae36768ba737d15504ac491e15f31a85e'
             '0c087d26e80333267391a6e9e34b95a2ffb103cb9391cb53cc5d97ad954af774'
             'c5a3ec55f9d1bc52e5e5b127f76b7b16b79738268691a3e1d842359033e460da'
             '2d17478fd607c75e396fe10ef2add8bc9fcc12054810fb6f4409dfb70e01989e'
@@ -39,6 +41,8 @@ pkgver() {
 
 prepare() {
   cd pacman
+
+  patch -p1 -i ../support-file-5.33-pie-executable.patch
 
   ./autogen.sh
 }
